--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "devDependencies": {
+    "eslint": "^8.42.0",
+    "eslint-plugin-vue": "^9.14.1",
     "postcss-pxtorpx-pro": "^2.0.0"
   },
   "dependencies": {
     "@vant/area-data": "^1.4.1",
+    "clipboard": "^2.0.11",
+    "dayjs": "^1.11.8",
     "lodash": "^4.17.21",
+    "uview-plus": "^3.1.32",
     "vant": "^4.4.0"
   }
 }
